--- a/lib/phoenix_files_web/templates/page/index.html.heex
+++ b/lib/phoenix_files_web/templates/page/index.html.heex
@@ -1,1 +1,1 @@
-<%= live_render(@conn, PhoenixFilesWeb.MultiSelectLive, id: "multi1", session: %{}, values: []) %>
+<%= live_render(@conn, PhoenixFilesWeb.MultiSelectLive, id: "multi1", session: %{}) %>
